# gouda4

./: .gitignore  CMakeLists.txt
include/: matrix.h
src/: gouda.cpp  matrix.cpp
